[github actions] added copy wms-qgs-content schema

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,21 @@ jobs:
       if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
       steps:
 
+      - name: Copy sogis-wms-qgs-content file
+        run: |
+          cp schemas/sogis-wms-qgs-content.json schemas/sogis-print-qgs-content.json
+
+      - name: Commit changes
+        run:
+          git config user.email agi.info@bd.so.ch
+          git config user.name agiuser
+          git commit -m "[github-action] copy file sogis-wms-qgs-content.json"
+
+      - name: Push Changes
+        uses: sogis/json2qgs@master
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Get the version from tag
         id: get_version
         run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
