--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 jobs:
 
     copySchemaFile:
-      runs-on: ubuntu:latest
+      runs-on: ubuntu-latest
       steps:
 
       - name: Copy sogis-wms-qgs-content file
