--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,10 @@ jobs:
           cp schemas/sogis-wms-qgs-content.json schemas/sogis-print-qgs-content.json
 
       - name: Commit changes
-        run:
-          git config --local user.email "agi.info@bd.so.ch"
-          git config --local user.name "agiuser"
-          git commit -m "[github-action] copy file sogis-wms-qgs-content.json"
+        run: |
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Action"
+          git commit -m "[github-action] copy file sogis-wms-qgs-content.json" -a
 
       - name: Push Changes
         uses: ad-m/github-push-action@master
