--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,20 +8,20 @@ jobs:
       runs-on: ubuntu-latest
       steps:
 
-      - uses: actions/checkout@update_action
+      - uses: actions/checkout@master
 
       - name: Copy sogis-wms-qgs-content file
         run: |
           cp schemas/sogis-wms-qgs-content.json schemas/sogis-print-qgs-content.json
 
       - name: Commit changes
-        run: |
+        run: 
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Action"
           git commit -m "[github-action] copy file sogis-wms-qgs-content.json" -a
 
       - name: Push Changes
-        uses: ad-m/github-push-action@update_action
+        uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
