[github-actions] revert syntax change

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
           cp schemas/sogis-wms-qgs-content.json schemas/sogis-print-qgs-content.json
 
       - name: Commit changes
-        run: 
+        run: | 
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Action"
           git commit -m "[github-action] copy file sogis-wms-qgs-content.json" -a
