[github-actions] handle no changes in sogis-print-qgs-content.json

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Action"
           git add schemas/sogis-print-qgs-content.json
-          git commit -m "[github-action] copy file sogis-wms-qgs-content.json" -a
+          git commit -m "[github-action] copy file sogis-wms-qgs-content.json" -a --allow-empty
 
       - name: Push Changes
         uses: ad-m/github-push-action@master
