--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,10 +38,10 @@ jobs:
           cd tests/docker
           docker-compose up -d
 
-      - name: Setting up python 3.6
+      - name: Setting up python 3.9
         uses: actions/setup-python@v2
         with:
-            python-version: '3.6'
+            python-version: '3.9'
 
       - name: Run unittests
         run: |
@@ -67,3 +67,30 @@ jobs:
           release_name: ${{ steps.get_version.outputs.VERSION }}
           tag_name: ${{ steps.get_version.outputs.VERSION }}
           draft: false
+      outputs:
+        VERSION: ${{ steps.get_version.outputs.VERSION }}
+
+    build:
+      needs: release
+      runs-on: ubuntu-latest
+      steps:
+
+      - name: Checkout
+        uses: actions/checkout@master
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Build and Push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/json2qgs:${{ needs.release.outputs.VERSION }}
